--- a/BrakeNeck/BrakeNeck/BrakeNeck.csproj
+++ b/BrakeNeck/BrakeNeck/BrakeNeck.csproj
@@ -114,10 +114,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTypes\TileMapInfo.Generated.cs" />
-    <Compile Include="Entities\MissileEmitter.cs" />
-    <Compile Include="Entities\MissileEmitter.Generated.cs">
-      <DependentUpon>MissileEmitter.cs</DependentUpon>
-    </Compile>
     <Compile Include="Entities\Obstacle.cs" />
     <Compile Include="Entities\Obstacle.Generated.cs">
       <DependentUpon>Obstacle.cs</DependentUpon>
@@ -125,6 +121,14 @@
     <Compile Include="Entities\ObstacleSpawner.cs" />
     <Compile Include="Entities\ObstacleSpawner.Generated.cs">
       <DependentUpon>ObstacleSpawner.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Particles\MissileEmitter.cs" />
+    <Compile Include="Entities\Particles\MissileEmitter.Generated.cs">
+      <DependentUpon>MissileEmitter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Particles\MissileDestructionParticles.cs" />
+    <Compile Include="Entities\Particles\MissileDestructionParticles.Generated.cs">
+      <DependentUpon>MissileDestructionParticles.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\PlayerBuggy.cs" />
     <Compile Include="Entities\PlayerBuggy.Event.cs">
@@ -143,6 +147,10 @@
     <Compile Include="Entities\SandStorm.cs" />
     <Compile Include="Entities\SandStorm.Generated.cs">
       <DependentUpon>SandStorm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\SpawnerBase.cs" />
+    <Compile Include="Entities\SpawnerBase.Generated.cs">
+      <DependentUpon>SpawnerBase.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\Tire.cs" />
     <Compile Include="Entities\Tire.Generated.cs">
