Moved spawning to a base spawner class to be shared across decoration and obstacles. Implemented decoration spawning.

--- a/BrakeNeck/BrakeNeck/BrakeNeck.csproj
+++ b/BrakeNeck/BrakeNeck/BrakeNeck.csproj
@@ -114,6 +114,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTypes\TileMapInfo.Generated.cs" />
+    <Compile Include="Entities\GroundDecorationSpawner.cs" />
+    <Compile Include="Entities\GroundDecorationSpawner.Generated.cs">
+      <DependentUpon>GroundDecorationSpawner.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Obstacle.cs" />
     <Compile Include="Entities\Obstacle.Generated.cs">
       <DependentUpon>Obstacle.cs</DependentUpon>
