Added debugging variables. Added a "path" that lets the player move through boxes more easily.

--- a/BrakeNeck/BrakeNeck/BrakeNeck.csproj
+++ b/BrakeNeck/BrakeNeck/BrakeNeck.csproj
@@ -114,6 +114,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTypes\TileMapInfo.Generated.cs" />
+    <Compile Include="Entities\DebuggingVariables.cs" />
+    <Compile Include="Entities\DebuggingVariables.Generated.cs">
+      <DependentUpon>DebuggingVariables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\GroundDecorationSpawner.cs" />
     <Compile Include="Entities\GroundDecorationSpawner.Generated.cs">
       <DependentUpon>GroundDecorationSpawner.cs</DependentUpon>
