--- a/BrakeNeck/BrakeNeck/BrakeNeck.csproj
+++ b/BrakeNeck/BrakeNeck/BrakeNeck.csproj
@@ -114,6 +114,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataTypes\TileMapInfo.Generated.cs" />
+    <Compile Include="Entities\CameraController.cs" />
+    <Compile Include="Entities\CameraController.Generated.cs">
+      <DependentUpon>CameraController.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\DebuggingVariables.cs" />
     <Compile Include="Entities\DebuggingVariables.Generated.cs">
       <DependentUpon>DebuggingVariables.cs</DependentUpon>
