--- a/BrakeNeck/BrakeNeck/BrakeNeck.csproj
+++ b/BrakeNeck/BrakeNeck/BrakeNeck.csproj
@@ -203,7 +203,9 @@
     <Compile Include="GumCore\EventSave.cs" />
     <Compile Include="GumCore\FileManager.cs" />
     <Compile Include="GumCore\GraphicalUiElement.cs" />
-    <Compile Include="GumCore\GraphicalUiElement.IWindow.cs" />
+    <Compile Include="GumCore\GraphicalUiElement.IWindow.cs">
+      <DependentUpon>GraphicalUiElement.cs</DependentUpon>
+    </Compile>
     <Compile Include="GumCore\GuideRectangle.cs" />
     <Compile Include="GumCore\GumAnimation.cs" />
     <Compile Include="GumCore\GumIdb.cs" />
@@ -213,7 +215,9 @@
     <Compile Include="GumCore\ImageData.cs" />
     <Compile Include="GumCore\InstanceSave.cs" />
     <Compile Include="GumCore\InstanceSaveExtensionMethods.cs" />
-    <Compile Include="GumCore\InstanceSaveExtensionMethods.GumRuntime.cs" />
+    <Compile Include="GumCore\InstanceSaveExtensionMethods.GumRuntime.cs">
+      <DependentUpon>InstanceSaveExtensionMethods.cs</DependentUpon>
+    </Compile>
     <Compile Include="GumCore\IPositionedSizedObject.cs" />
     <Compile Include="GumCore\IRenderable.cs" />
     <Compile Include="GumCore\IRenderableIpso.cs" />
@@ -251,7 +255,9 @@
     <Compile Include="GumCore\StateSaveExtensionMethods.cs" />
     <Compile Include="GumCore\StringFunctions.cs" />
     <Compile Include="GumCore\SystemManagers.cs" />
-    <Compile Include="GumCore\SystemManagers.FlatRedBall.cs" />
+    <Compile Include="GumCore\SystemManagers.FlatRedBall.cs">
+      <DependentUpon>SystemManagers.cs</DependentUpon>
+    </Compile>
     <Compile Include="GumCore\Text.cs" />
     <Compile Include="GumCore\TextManager.cs" />
     <Compile Include="GumCore\TextureFlipAnimation.cs" />
