--- a/BrakeNeck/BrakeNeck/BrakeNeck.csproj
+++ b/BrakeNeck/BrakeNeck/BrakeNeck.csproj
@@ -122,6 +122,10 @@
     <Compile Include="Entities\DebuggingVariables.Generated.cs">
       <DependentUpon>DebuggingVariables.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entities\GameText.cs" />
+    <Compile Include="Entities\GameText.Generated.cs">
+      <DependentUpon>GameText.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\GroundDecorationSpawner.cs" />
     <Compile Include="Entities\GroundDecorationSpawner.Generated.cs">
       <DependentUpon>GroundDecorationSpawner.cs</DependentUpon>
